update question functionality

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,3 +1,8 @@
+.edit_post_links {
+  margin-top: 10px;
+  text-align: center;
+}
+
 .panel {
   border: none;
   border-top: 5px solid #ec6952 !important;
