--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -12,38 +12,15 @@
 
   <%= back_to_lesson %>
 
-  <h3>Guidelines</h3>
-  <ul>
-
-    <li><strong>Google your question first</strong></li>
-    <ul>
-      <li>Becoming a great googler and getting your own answers is an essential skill to become a competent developer. Google is smarter than anyone, ask it first, and if you still don't understand, seek for assistance.</li>
-    </ul>
-
-    <li><strong>Ask good questions</strong></li>
-    <ul>
-      <li>Bad questions will result in bad answers. Good questions are those which are specific, concise, and practical.</li>
-    </ul>
-
-    <li><strong>See previous questions</strong></li>
-    <ul>
-      <li>Has anyone else asked the same question? If so, read the answers to those questions first before seeking further assistance.</li>
-    </ul>
-
-  </ul>
-
   <br>
 
-  <%= simple_form_for :question, url: questions_path, method: :post, input_html: {class: 'form-horizontal'} do |f| %>
+  <%= simple_form_for @question, method: :put, input_html: {class: 'form-horizontal'} do |f| %>
     <%= f.input :title, required: true %>
     <div data-no-turbolink>
       <%= f.cktext_area :content, as: :text, input_html: {rows: 6}, ckeditor: {language: 'us'}, required: true, class: 'ckeditor' %>
     </div>
-    <%= f.input :lesson_id, as: :hidden, input_html: { value: params[:lesson_id]} %>
-    <%= f.input :course_name, as: :hidden, input_html: { value: params[:course_name]} %>
-
     <br>
-    <%= f.submit 'Submit Question', class: 'btn btn-primary' %>
+    <%= f.submit 'Submit', class: 'btn btn-primary' %>
   <% end %>
 
 </div>
