--- a/app/views/rspec_blog_lessons/lessons/lesson_1.html.erb
+++ b/app/views/rspec_blog_lessons/lessons/lesson_1.html.erb
@@ -50,7 +50,7 @@ Expect something to do this.
 </code></pre>
 
 <p>
-  Then, when you run the test, the expectation will either pass or fail.
+  Then, when you run the test, the test will either pass or fail.
 </p>
 
 <p>
@@ -58,8 +58,8 @@ Expect something to do this.
 </p>
 
 <pre><code class="html">
-I named my cat's named Fish.
-Expect my cat's name to be Fish. &lt;!-- this will pass --&gt;
+I named my cat Fish.
+I expect my cat's name to be Fish. &lt;!-- this will pass --&gt;
 </code></pre>
 
 <p>
@@ -67,8 +67,8 @@ Expect my cat's name to be Fish. &lt;!-- this will pass --&gt;
 </p>
 
 <pre><code class="html">
-I named my cat's named Fish.
-Expect my cat's name to be Dog. &lt;!-- this will fail --&gt;
+I named my cat Fish.
+I expect my cat's name to be Dog. &lt;!-- this will fail --&gt;
 </code></pre>
 
 <p> 
