--- a/app/views/rspec_blog_lessons/lessons/lesson_2.html.erb
+++ b/app/views/rspec_blog_lessons/lessons/lesson_2.html.erb
@@ -20,11 +20,11 @@ expect(@cat.name).to eq("Dog") # this test will fail
 
 
 <p>
-  The <code>expect(@cat.name).to eq("Fish")</code> and <code>expect(@cat.name).to eq("Dog")</code> portion is written in RSpec. Notice how it's very similar to Ruby, but also similar to English at the same time. <strong>It's straightforward and very easy to read:</strong> expect the cat's name to equal Dog.
+  The <code>expect(@cat.name).to eq("Fish")</code> and <code>expect(@cat.name).to eq("Dog")</code> portion is written in a testing framework called RSpec. Notice how it's very similar to Ruby, but also similar to English at the same time. <strong>It's straightforward and very easy to read:</strong> expect the cat's name to equal Dog.
 </p>
 
 <p>
-  RSpec is a testing framework that allows us to write tests in a very human-readable way, and is the most popular testing framework among Ruby on Rails developers.
+  <strong>RSpec is a testing framework that allows us to write tests in a very human-readable way, and is the most popular testing framework among Ruby on Rails developers.</strong>
 </p>
 
 <%= create_flashcard %>
