--- a/app/views/submissions/_student_submissions.html.erb
+++ b/app/views/submissions/_student_submissions.html.erb
@@ -1,6 +1,6 @@
 <h5 style="line-height: 2 !important;"><%= pluralize @submissions.count, "student" %> including
   <% @submission_user_ids.each do |i| %>
-    <label class="label label-default"><%= User.find(i).name %></label>
+    <label class="label label-default" style="margin: 0px 2px;"><%= User.find(i).name %></label>
   <% end %>
   have passed this assignment.
 </h5>
