--- a/app/views/submissions/show.html.erb
+++ b/app/views/submissions/show.html.erb
@@ -54,7 +54,7 @@
   <hr>
 
         
-  <% @submission.submission_replies.order("created_at DESC").each do |reply| %>
+  <% @submission.submission_replies.order("created_at ASC").each do |reply| %>
     <% user = User.find(reply.user_id) %>
     <div class="row">
       <div class="col-xs-2">
