--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -29,6 +29,8 @@
                     <div class="form-box col-md-8 col-sm-12 col-xs-12 col-md-offset-2 col-sm-offset-0 xs-offset-0">     
                         <div class="form-box-inner">
 
+                          <%= render "shared/flash_messages" %>
+
                           <%= yield %>
                             
                         </div><!--//form-box-inner-->
