--- a/app/views/mvc_lessons/lessons/lesson_4.html.erb
+++ b/app/views/mvc_lessons/lessons/lesson_4.html.erb
@@ -1,1 +1,19 @@
-<h1><%= title_for(MvcLesson, 1, 4) %></h1>
+<h1><%= title_for(MvcLesson, 3, 1) %></h1>
+
+<p>
+  In order to get you familiar with common methods used in Ruby on Rails, we will have you go through a series of super entertaining lessons called Rails for Zombies. They are mostly things that we have already done in the Ideator app, but the lessons will hopefully clear up a lot of the confusion that you might have had.
+</p>
+
+<h2>Instructions</h2>
+
+<ul>
+  <li>Go to <%= link_to 'Rails for Zombies', 'http://railsforzombies.org/levels/1' %></li>
+  <li>Finish Level 1</li>
+  <li>Submit a screenshot of the completed screen</li>
+</ul> 
+
+<p>
+  Good luck and have fun!
+</p>
+
+<% @submission_form = true %>
