--- a/app/views/mvc_lessons/lessons/lesson_3.html.erb
+++ b/app/views/mvc_lessons/lessons/lesson_3.html.erb
@@ -1,1 +1,191 @@
-<h1><%= title_for(MvcLesson, 1, 3) %></h1>
+<h1><%= title_for(MvcLesson, 2, 1) %></h1>
+
+<p>
+  If you have never learned about HTTP methods, you are probably confused about what exactly are <code>GET</code> requests or <code>POST</code> requests are at this point. When developing web apps, you will encounter several types of HTTP requests:
+</p>
+
+<ul>
+  <li>GET</li>
+  <li>POST</li>
+  <li>DELETE</li>
+  <li>PUT</li>
+  <li>PATCH</li>
+</ul>
+
+<p>
+  Let's open up the terminal and navigate ourselves to the Ideator app:
+</p>
+
+<pre><code class="bash">
+cd ~/desktop/ideator
+</code></pre>
+
+<p>
+  Let's then type in the following in the terminal and press enter:
+</p>
+
+<pre><code class="bash">
+rake routes
+</code></pre>
+
+<p>
+  It should display something like this:
+</p>
+
+<pre><code>
+   Prefix Verb   URI Pattern               Controller#Action
+     root GET    /                         ideas#index
+    ideas GET    /ideas(.:format)          ideas#index
+          POST   /ideas(.:format)          ideas#create
+ new_idea GET    /ideas/new(.:format)      ideas#new
+edit_idea GET    /ideas/:id/edit(.:format) ideas#edit
+     idea GET    /ideas/:id(.:format)      ideas#show
+          PATCH  /ideas/:id(.:format)      ideas#update
+          PUT    /ideas/:id(.:format)      ideas#update
+          DELETE /ideas/:id(.:format)      ideas#destroy
+</code></pre>
+
+<p>
+  As you can see, Ruby on Rails applications uses <code>GET</code>, <code>POST</code>, <code>PATCH</code>, <code>PUT</code>, and <code>DELETE</code> requests very frequently. Thus, it is important to learn what it actually means.
+</p>
+
+<p>
+  We will walk you through all of these types of requests so that you can better understand them when they show up.
+</p>
+
+<h3>GET Requests</h3>
+
+<p>
+  GET requests are the most commonly uses HTTP request. <strong><code>GET</code> requests used to retrieve data from a server.</strong> For example, if I go to my browser and go to <%= link_to 'http://www.techrise.me' %>, then I am making a <code>GET</code> request to the TECHRISE server to retrieve the data of the web page. The browser then receives the information about the web page and displays it for us.
+</p>
+
+<p>
+  In short, whenever we access a web page, we are making a <code>GET</code> request.
+</p>
+
+<%= create_flashcard %>
+
+<h3>POST Requests</h3>
+
+<p>
+  <strong>A POST request is used to send data to the server, for example, customer information, file uploads, etc. using HTML forms.</strong> It is often used to create new objects. For example, in <code>index.html.erb</code> in our Ideator app, we have the following form:
+</p>
+
+<pre><code class="erb">
+&lt;%= simple_form_for Idea.new do |f| %&gt;
+  &lt;div class="modal-body"&gt;
+      &lt;%= f.input :description %&gt;
+      &lt;%= f.input :author %&gt;
+  &lt;/div&gt;
+  &lt;div class="modal-footer"&gt;
+    &lt;button type="button" class="btn btn-default" data-dismiss="modal"&gt;Close&lt;/button&gt;
+    &lt;%= f.submit 'Submit', class: 'btn btn-primary' %&gt;
+  &lt;/div&gt;
+&lt;% end %&gt;
+</code></pre>
+
+<p>
+  This is a form that allows users to input the information about the new idea and submit it to the server. When the user hits the submit button, a <code>POST</code> request is made to the Ideator application. In other words, the information that the user filled out in the form is sent to the Ideator server. The application then takes the information and creates a new <code>Idea</code> based on that information.
+</p>
+
+<p>
+  In short, <code>POST</code> requests send data to the server. It is typically used to create new objects; in the case of the Ideator app, <code>POST</code> requests are made to create a new <code>Idea</code> object.
+</p>
+
+<%= create_flashcard %>
+
+<h3>DELETE Requests</h3>
+
+<p>
+  <code>DELETE</code> <strong>requests do what you would expect; it is used to delete objects.</strong>
+</p>
+
+<p>
+  For example, in <code>index.html.erb</code> in our Ideator app, we have the following line of code:
+</p>
+
+<pre><code class="ruby">
+&lt;%= link_to 'Delete', idea_path(idea), method: :delete, class: 'btn btn-sm pull-left', data: {confirm: "Are you sure?"} %&gt;
+</code></pre>
+
+<p>
+  This piece of code creates a link that deletes an idea from the application. This is an example of a <code>DELETE</code> request.
+</p>
+
+<%= create_flashcard %>
+
+<h3>PATCH Requests</h3>
+
+<p>
+  <code>PATCH</code> <strong>requests are used to update an object.</strong>
+</p>
+
+<p>
+  For example, in <code>edit.html.reb</code> in our Ideator app, we wrote the following form:
+</p>  
+
+<pre><code class="ruby">
+&lt;%= simple_form_for @idea, method: :patch do |f| %&gt;
+  &lt;%= f.input :description %&gt;
+  &lt;%= f.input :author %&gt;    
+  &lt;%= f.submit 'Submit', class: 'btn btn-primary' %&gt;
+&lt;% end %&gt;
+</code></pre>
+
+<p>
+  We wrote this form so that we can update our ideas. We can edit our ideas using this form. When we submit this form, a <code>PATCH</code> request is sent to the server. The server then updates the ideas according to the form that we submitted.
+</p>
+
+<%= create_flashcard %>
+
+<h3>PUT Requests</h3>
+
+<p>
+  Even though <code>PUT</code> requests and <code>PATCH</code> requests both map to the <code>update</code> method (see result of <code>rake routes</code>), many Ruby on Rails developers don't use <code>PUT</code> requests anymore, and use <code>PATCH</code> requests instead. 
+</p>
+
+<p>
+  You don't need to understand exactly why this is, but if you would like to read about the topic, here a few links that explain this well:
+</p>
+
+<ul>
+  <li><%= link_to 'http://weblog.rubyonrails.org/2012/2/26/edge-rails-patch-is-the-new-primary-http-method-for-updates/' %></li>
+  <li><%= link_to 'http://stackoverflow.com/questions/21660791/what-is-the-main-difference-between-patch-and-put-request' %></li>
+</ul>
+
+<p>
+  <strong>In short, don't use <code>PUT</code> requests, use <code>PATCH</code> requests instead.</strong>
+</p>
+
+<%= create_flashcard %>
+
+<h2>A Final Overview</h2>
+
+<p>
+  Here is a final overview of all of the HTTP methods in short sentences:
+</p>
+
+<ul>
+  <li><code>GET</code> requests are used to retrieve data. When you vist a web page, you are making a <code>GET</code> request.</li>
+  <li><code>POST</code> requests are used to create new objects.</li>
+  <li><code>DELETE</code> requests are used to delete objects.</li>
+  <li><code>PATCH</code> requests are used to update objects.</li>
+  <li><code>PUT</code> requests are not used anymore, use <code>PATCH</code> requests instead.</li>
+</ul>
+
+<%= create_flashcard %>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
