--- a/app/views/questions/_question_solved_form.html.erb
+++ b/app/views/questions/_question_solved_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for :question, url: question_statuses_path(params[:id]), method: :put, remote: true do |f| %>
+<%= simple_form_for :question, url: question_statuses_path(params[:id]), method: :patch, remote: true do |f| %>
   <% if @question.resolved %>
     <%= button_tag(type: 'submit', class: "btn btn-success") do %>
     <i class="fa fa-check-circle" aria-hidden="true"></i> Resolved
