--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -14,7 +14,7 @@
 
   <br>
 
-  <%= simple_form_for @question, method: :put, input_html: {class: 'form-horizontal'} do |f| %>
+  <%= simple_form_for @question, method: :patch, input_html: {class: 'form-horizontal'} do |f| %>
     <%= f.input :title, required: true %>
     <div data-no-turbolink>
       <%= f.cktext_area :content, as: :text, input_html: {rows: 6}, ckeditor: {language: 'us'}, required: true, class: 'ckeditor' %>
