--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,5 @@
 <%- title "#{@post.title} | TECHRISE - IT Coding Bootcamp in Nepal" %>
+<%- og_title "#{@post.title} | TECHRISE - IT Coding Bootcamp in Nepal" %>
 
 <!-- ******BLOG****** -->         
 <div class="blog-entry-wrapper"> 
