--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -216,7 +216,8 @@ span.radio.inline {
   margin: 0 auto;
   width: 100px;
   display: block;
-  border: 4px solid #ec6952;
+  border: 2px solid #ec6952;
+  padding: 2px;
 }
 
 .nav-badge {
