--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -2705,9 +2705,9 @@ select {
 .pagination {
   margin-bottom: 60px;
   font-size: 14px;
-  font-family: arial, sans-serif;
   margin-left: auto;
   margin-right: auto;
+  display: table;
 }
 .pagination li a {
   -webkit-border-radius: 4px;
@@ -2731,8 +2731,9 @@ select {
 .pagination > .active > span:hover,
 .pagination > .active > a:focus,
 .pagination > .active > span:focus {
-  background-color: #ec6952;
+  background-color: #ddd;
   border: none;
+  border-radius: 4px;
 }
 .pagination > li > a:hover,
 .pagination > li > span:hover,
