--- a/app/assets/stylesheets/community.scss
+++ b/app/assets/stylesheets/community.scss
@@ -1,3 +1,9 @@
+.panel-head {
+  background: #f7f7f7;
+  height: 80px;
+  padding: 20px 40px;
+}
+
 .community_prof_pic {
   border-radius: 50%;
   height: 50px;
