--- a/app/views/community/index.html.erb
+++ b/app/views/community/index.html.erb
@@ -1,6 +1,14 @@
 <div class="panel">
+  <div class="panel-head">
+    <%= form_tag community_index_path, method: :get, class: 'form-inline' do %>
+        <%= text_field_tag :query, params[:query], placeholder: 'Search for an answer', class: 'form-control' %>
+        <%= submit_tag "Search", name: nil, class: 'btn btn-danger' %>
+    <% end %>
+  </div>
   <div class="panel-body">
+
     <%= will_paginate @questions, renderer: BootstrapPagination::Rails %>
+
 
     <% @questions.each do |question| %>
       <ul class="question_list">
@@ -13,7 +21,7 @@
             </div><!-- col-xs-12 col-sm-4 -->
 
             <div class="col-xs-12 col-sm-8">
-              <h5 class="question_container_title"><%= link_to question.title, question %></h5>
+              <h5 class="question_container_title"><%= link_to question.title, question_path(question) %></h5>
               <div class="question_container_information">
                 <span class="question_container_time"><%= time_ago_in_words(question.created_at) %> ago</span> by <span class="question_container_user"><%= user.name %></span>
               </div><!-- question_container_information -->
@@ -40,5 +48,6 @@
     <% end %>
 
     <%= will_paginate @questions, renderer: BootstrapPagination::Rails %>
+   
   </div><!-- panel-body -->
 </div><!-- panel -->
