--- a/app/views/application/show.html.erb
+++ b/app/views/application/show.html.erb
@@ -1,3 +1,5 @@
+<% title(Tags::LESSONS[controller_name.classify.underscore + "s"].keys[params[:id].to_i - 1][1] + " | TECHRISE") %>
+
 <style type="text/css">
 .course_html {
   background: white;
