--- a/app/views/community/index.html.erb
+++ b/app/views/community/index.html.erb
@@ -1,3 +1,5 @@
+<% title("Community | TECHRISE") %>
+
 <div class="panel">
   <div class="panel-head">
     <%= form_tag community_index_path, method: :get, class: 'form-inline' do %>
