--- a/app/views/static_pages/dashboard.html.erb
+++ b/app/views/static_pages/dashboard.html.erb
@@ -1,3 +1,5 @@
+<% title("Dashboard | TECHRISE") %>
+
 <div class="row">
   <div class="col-xs-12">
     <% flash.each do |message_type, message| %>
