--- a/app/views/command_line_lessons/lessons/lesson_1.html.erb
+++ b/app/views/command_line_lessons/lessons/lesson_1.html.erb
@@ -114,8 +114,88 @@ cd ../..
 </code></pre>
 
 <p>
-  This will navigate 2 directories up. In our terminal, let's run the following:
+  This will navigate 2 directories up. Let's practice this. In our terminal, let's run the following:
 </p>
+
+
+<pre><code class="bash">
+cd ~/desktop/ideator
+</code></pre>
+
+<p>
+  Let's make sure where we are in the correct directory. To do that, let's run the following command:
+</p>  
+
+<pre><code class="bash">
+pwd
+</code></pre>
+
+<p>
+  This should print the working directory (<code>pwd</code> stands for print working directory).
+</p>  
+
+<p>
+  Let's navigate one directory up. Type in the following command and press enter:
+</p>
+
+<pre><code class="bash">
+cd ..
+</code></pre>
+
+<p>
+  Let's make sure we are in the right directory:
+</p>
+
+<pre><code class="bash">
+pwd
+</code></pre>
+
+<p>
+   If you are in the <code>desktop</code> directory, then you are on the right track.
+</p>
+
+<p>
+  Let's navigate to the <code>ideator</code> directory again. Type in the following command and press enter:
+</p>
+
+<pre><code class="bash">
+cd ideator
+</code></pre>
+
+<p>
+  Let's print the current directory:
+</p>
+
+<pre><code class="bash">
+pwd
+</code></pre>
+
+<p>
+  Let's now navigate 2 directories up:
+</p>
+
+<pre><code class="bash">
+cd ../..
+</code></pre>
+
+<p>Let's make sure we are in the home directory:</p>
+
+<pre><code class="bash">
+pwd
+</code></pre>
+
+<p>
+
+</p>  
+
+
+
+
+
+
+
+
+
 
 
 
