--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,5 +37,19 @@
   <%= render '/layouts/lesson_footer' %>
   
   <%= render '/layouts/audio' %>
+
+  <script type="text/javascript">
+  ready = function() {
+    $('pre code').each(function(i, e) {hljs.highlightBlock(e)});
+  }
+  $(document).ready(ready);
+  $(document).on('page:load', ready);
+  $(document).on('page:change',  function() {
+    $('pre code').each(function(i, e) {hljs.highlightBlock(e)});
+  });
+  $(document).on('page:restore', function() {
+    $('pre code').each(function(i, e) {hljs.highlightBlock(e)});
+  });
+  </script>
 </body>
 </html>
