--- a/app/views/command_line_lessons/lessons/lesson_1.html.erb
+++ b/app/views/command_line_lessons/lessons/lesson_1.html.erb
@@ -184,45 +184,91 @@ cd ../..
 pwd
 </code></pre>
 
-<h3>Creating New Files</h3>
+<p>
+  Awesome. Navigating through files in your terminal should now be a piece of cake :)
+</p>
 
+<h3>mkdir</h3>
 
+<p>
+  Let's navigate ourselves to the desktop directory. In the terminal, type in the following and press enter:
+</p>
 
+<pre><code class="bash">
+cd ~/desktop
+</code></pre>
 
+<p>
+  Let's create a new folder on our desktop. We can do this with the <code>mkdir</code> command. <code>mkdir</code> stands for <strong>make directory</strong>. Let's create a folder called <code>techrise_folder</code>. In the terminal, type in the following and press enter:
+</p>
 
+<pre><code class="bash">
+mkdir techrise_folder
+</code></pre>
 
+<h3>ls</h3>
 
+<p>
+  Let's make sure that the <code>techrise_folder</code> was actually created. We can do this with the <code>ls</code> command. <code>ls</code> stands for <strong>list directory contents</strong>. Developers use the <code>ls</code> command whenever they want a quick look at the folders in the current directory.
+</p>
 
+<p>
+  In the terminal, let's type in the following and press enter:
+</p>
 
+<pre><code class="bash">
+ls
+</code></pre>
 
+<p>
+  This command will print out all of your folders in your <code>desktop</code>. Make sure that <code>techrise_folder</code> is listed in there as well.
+</p>
 
+<p>
+  Let's navigate to the <code>techrise_folder</code>. In the terminal, type in the following and press enter:
+</p>
 
+<pre><code class="bash">
+cd techrise_folder
+</code></pre>
 
+<p>
+  Let's make a new folder called <strong>folder_1</strong>. In the terminal, type in tthe following and press enter:
+</p>
 
+<pre><code class="bash">
+mkdir folder_1
+</code></pre>
 
+<p>
+  Let's make sure the folder was created correctly. In the terminal, type in tthe following and press enter:
+</p>
 
+<pre><code class="bash">
+ls
+</code></pre>
 
+<p>
+  It should display <code>folder_1</code>. Let's create another folder called <code>folder_2</code>. In the terminal, type in tthe following and press enter:
+</p>  
 
+<pre><code class="bash">
+mkdir folder_2
+</code></pre>
 
+<p>
+  It should now display <code>folder_1 folder_2</code>.
+</p>
 
+<h3>Wrap Up</h3>
 
+<p>
+  In this lesson, we have briefly introduced the main commands you will be using in the beginning stages of your web development career.
+</p>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<p>
+  There are more commands that you can pick up along the way, but make sure to be able to use these 4 commands very well. The next lesson is optional and is for people who want to become a command line ninja :)
+</p>
 
 
 
