--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -47,7 +47,7 @@
                                 <span class="country-name">Japan</span>
                             </span>
                         </p>
-                        <p class="tel"><i class="fa fa-phone"></i>+81 806 174 7394</p>
+                        <p class="tel"><i class="fa fa-phone"></i>9808378374</p>
                         <p class="email"><i class="fa fa-envelope-o"></i><a href="#"> natsuko@techrise.me</a></p> 
                         <ul class="social list-inline">
                             <!-- <li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li> -->
