--- a/app/views/command_line_lessons/lessons/lesson_1.html.erb
+++ b/app/views/command_line_lessons/lessons/lesson_1.html.erb
@@ -199,7 +199,14 @@ cd ~/desktop
 </code></pre>
 
 <p>
-  Let's create a new folder on our desktop. We can do this with the <code>mkdir</code> command. <code>mkdir</code> stands for <strong>make directory</strong>. Let's create a folder called <code>techrise_folder</code>. In the terminal, type in the following and press enter:
+  Let's create a new folder on our desktop. We can do this with the <code>mkdir</code> command. <code>mkdir</code> stands for <strong>make directory</strong>. Developers use this command when they want to make a new folder in the urrent directory.
+
+</p>
+
+<%= create_flashcard %>
+
+<p>
+  Let's create a folder called <code>techrise_folder</code>. In the terminal, type in the following and press enter:
 </p>
 
 <pre><code class="bash">
@@ -211,6 +218,8 @@ mkdir techrise_folder
 <p>
   Let's make sure that the <code>techrise_folder</code> was actually created. We can do this with the <code>ls</code> command. <code>ls</code> stands for <strong>list directory contents</strong>. Developers use the <code>ls</code> command whenever they want a quick look at the folders in the current directory.
 </p>
+
+<%= create_flashcard %>
 
 <p>
   In the terminal, let's type in the following and press enter:
