--- a/app/views/static_pages/contact_us.html.erb
+++ b/app/views/static_pages/contact_us.html.erb
@@ -1,3 +1,5 @@
+<% title("Contact Us | TECHRISE - Coding Bootcamp in Nepal") %>
+
 <div class="headline-bg contact-headline-bg">
 </div><!--//headline-bg-->
 
