--- a/app/views/static_pages/preregistration.html.erb
+++ b/app/views/static_pages/preregistration.html.erb
@@ -1,4 +1,4 @@
-
+<% title("Preregistration |  TECHRISE - Coding Bootcamp in Nepal") %>
 <div class="upper-wrapper">
     <!-- ******HEADER****** -->
     <header class="header">
