--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,3 +1,5 @@
+<% title("About | TECHRISE - Coding Bootcamp in Nepal") %>
+
 <div class="headline-bg about-headline-bg">
 </div><!--//headline-bg-->   
 
