--- a/app/views/static_pages/activity_log.html.erb
+++ b/app/views/static_pages/activity_log.html.erb
@@ -1,3 +1,5 @@
+<% title("Activity Log | TECHRISE") %>
+
 <div class="devise_box">
   <h3>Your Activity Log</h3>
   <% @activities.each do |activity| %>
