--- a/app/views/static_pages/support.html.erb
+++ b/app/views/static_pages/support.html.erb
@@ -1,3 +1,5 @@
+<% title("Support | TECHRISE - Coding Bootcamp in Nepal") %>
+
 <div class="headline-bg about-headline-bg">
 </div><!--//headline-bg-->   
 
